# web-home

./: .gitignore  CREDIT.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: publish.yml  test_ssh.yml
docker/: build.sh  docker-compose.yml  image
src/: entry.rs  global_security.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/Htrace/: mod.rs
src/api/login/: components.rs  mod.rs  salt.rs  user_back.rs
src/api/modules/: components.rs  helper.rs  mod.rs
src/api/proxys/: imap.rs  imap_components.rs  imap_error.rs  imap_inner.rs  mod.rs  proxy_cache.rs  wget.rs
src/api/translateBooks/: mod.rs  translateBook.rs  translateManager.rs
src/front/: layout.rs  mod.rs
src/front/module_home/: links.rs  mod.rs
src/front/modules/: components.rs  link.rs  mail.rs  mod.rs  module_actions.rs  module_holder.rs  module_positions.rs  module_type.rs  rss.rs  todo.rs  weather.rs
src/front/pages/: connection.rs  home.rs  inscription.rs  mod.rs
src/front/utils/: all_front_enum.rs  contentDownloader.rs  dialog.rs  mod.rs  toaster_helpers.rs  trace.rs  translate.rs  usersData.rs  users_data.rs
src/front/utils/fluent/: FluentManager.rs  mod.rs
static/public/: CREDIT.md  setUpWorkers.js  sleep-worker.js
static/public/weather/: credits.md
static/style/: dialog.css  linksheader.scss  main.scss  modules.css  obfuscate.scss  reset.scss
static/translates/EN/: main.flt
static/translates/FR/: main.flt
