[package]
name = "web-home"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.12", features = ["islands"] }
leptos_router = { version = "0.8.9" }
axum = { version = "0.8.6", optional = true }
console_error_panic_hook = "0.1"
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = { version = "0.8.5" }
leptoaster = "0.2.3"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tower-sessions = { git = "https://github.com/maxcountryman/tower-sessions"} # version 0.14 use old version of rand
wasm-bindgen = "=0.2.104"
Hconfig = {  version = "2.0", optional = true }
Htrace = {  version = "2.0", optional = true }
dashmap = {version = "6.1.0", features = ["rayon"]}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
http = "1"
leptos-use = { version = "0.16.2", features = ["use_locales","use_cookie","storage","use_draggable","use_mouse_in_element"] }
fluent = { version = "0.17.0" }
intl-memoizer = "0.5.2"
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
anyhow = "1.0.95"
time = { version = "0.3", features = ["macros","wasm-bindgen"] }
sha3 = {  version = "0.10.8", features = ["default"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
getrandom = { version = "0.3", optional = true }
rust-argon2 = "3.0"
aes-gcm = "0.11.0-rc.1"
serde_json = "1.0.145"

[features]
hydrate = [
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "leptos-use/axum",

    "dep:Hconfig",
    "dep:Htrace",
    "dep:getrandom"
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "webhome"

# The site root folder is where cargo-leptos generate all output. WARNING: all modules of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "static/style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "static/public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the modules. Use it in your server setup.
site-addr = "127.0.0.1:3001"

# The port to use for automatic reload monitoring
reload-port = 3011

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

#fix for getrandom backend setup from https://github.com/bevyengine/bevy/issues/20476#issuecomment-3173383130
[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { version = "0.2", features = ["js"], package = "getrandom" }
uuid = { version = "1.17", features = ["js"] }
